tests/baselines/reference/selfRef.errors.txt
==== tests/cases/compiler/selfRef.ts (2 errors) ====
    module M
    {
        export class Test
        {
          private name = "hello";
          public setName = function(value: string): void {
          (function () {
              name=value;
           ~~~~
!!! selfRef.ts(8,8): error TS2095: Cannot find name 'name'.
          })();
          }
          public getName = function(): string {
              return name;
                     ~~~~
!!! selfRef.ts(12,18): error TS2095: Cannot find name 'name'.
          }
        }
    }
    
    
    